--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -1,19 +1,21 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
-project(PROJECT_NAME CXX)
 
-if(POLICY CMP0144)
-  cmake_policy(SET CMP0144 NEW)
-endif()
+project(PROJECT_NAME CXX)
 
 find_package(SciRooPlot CONFIG REQUIRED)
 message(STATUS "SciRooPlot version: ${SciRooPlot_VERSION}")
 
-add_executable(definePlots
-  src/DefinePlots.cxx
+add_plotting_executable(definePlots
+  SOURCES DefinePlots.cxx
 )
-target_link_libraries(definePlots PRIVATE SciRooPlot::SciRooPlot)
 
-# if needed add include dirs
-#target_include_directories(definePlots
-#    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/inc
-#)
+# Link against SciRooPlot using the helper function add_plotting_executable:
+#
+#  add_plotting_executable(definePlots
+#    SOURCES
+#      src/DefinePlots.cxx
+#      src/SomeOtherFile.cxx
+#    INCLUDES
+#      include/
+#      include2/
+#  )
