add proper build tree mode

--- a/scripts/scirooplot-env.sh.in
+++ b/scripts/scirooplot-env.sh.in
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-export SCIROOPLOT_ROOT=@CMAKE_INSTALL_PREFIX@
+export SCIROOPLOT_ROOT=@SCIROOPLOT_ROOT@
 export SCIROOPLOT_BIN=${SCIROOPLOT_ROOT}/@CMAKE_INSTALL_BINDIR@
 export SCIROOPLOT_DATA_DIR=${SCIROOPLOT_ROOT}/share/scirooplot
 
