--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
 project(PROJECT_NAME CXX)
 
+if(POLICY CMP0144)
+  cmake_policy(SET CMP0144 NEW)
+endif()
+
 find_package(SciRooPlot CONFIG REQUIRED)
 message(STATUS "SciRooPlot version: ${SciRooPlot_VERSION}")
 
