--- a/scripts/scirooplot-env.sh.in
+++ b/scripts/scirooplot-env.sh.in
@@ -42,11 +42,13 @@ function plot() {
 function plot-config() {
   if [[ "${1}" == "create" ]]; then
     local project_name="${2}"
-    local folder_name="${project_name}"
-    [ -n "${3}" ] && folder_name="${3}"
-
-    if [ -d "${folder_name}" ]; then
-      echo "Folder ${project_name} already exists. Doing nothing..."
+    local project_path="${project_name}"
+    [ -n "${3}" ] && project_path="${3}"
+    if [[ "${project_path}" != /* ]]; then
+      project_path="$(pwd)/${project_path}"
+    fi
+    if [ -d "${project_path}" ]; then
+      echo "Folder ${project_path} already exists. Doing nothing..."
       return 1
     fi
     if [[ -z "${project_name}" ]]; then
@@ -57,18 +59,20 @@ function plot-config() {
       echo "A project cannot be called @current."
       return 1
     fi
-    local workdir="$(pwd)"
-    mkdir "${folder_name}"
-    local project_path="${workdir}/${folder_name}"
-    mkdir "${project_path}/build"
+    mkdir -p "${project_path}/build"
     cp -r "${SCIROOPLOT_DATA_DIR}/user/"* "${project_path}/"
     sed -i.bak "s/PROJECT_NAME/${project_name}/" "${project_path}/CMakeLists.txt" && rm -f "${project_path}/CMakeLists.txt.bak"
     sed -i.bak "s/PROJECT_NAME/${project_name}/" "${project_path}/DefinePlots.cxx" && rm -f "${project_path}/DefinePlots.cxx.bak"
     "${SCIROOPLOT_BIN}/plot-config" "set" "${project_name}" "EXE" "${project_path}/build/definePlots"
+    local curdir="$(pwd)"
     cd "${project_path}/build" && cmake -Wno-dev .. 2>&1 > /dev/null && make 2>&1 > /dev/null && ./definePlots
-    cd "${workdir}"
+    cd "${curdir}"
   else
-    "${SCIROOPLOT_BIN}/plot-config" "$@"
+    args=("$@")
+    if (( ${#args[@]} >= 4 )) && [[ "${args[4]}" != /* ]]; then
+      args[4]="$(pwd)/${args[4]}"
+    fi
+    "${SCIROOPLOT_BIN}/plot-config" "${args[@]}"
   fi
   return 0
 }
